# rust_go_fun_2024

./: README.md  curl_test_all.sh  curl_test_go_mongo.sh  curl_test_rust_actix.sh  curl_test_rust_mongo.sh  curl_test_workers.sh  docker-compose.yml  test_curl.sh
go/: certificate.pem  csr.csr  dockerfile  go.mod  go.sum  httpsServer.go  key.pem
go/assets/: addworker.html  index.html  querystatus.html  querystatuses.html  queryworker.html  stopworker.html
go/assets/styles/: style.css
go/database/: Instance.go
go/domain/: Example.go
go/handlers/: ExamplesHandler.go  WorkerHandler.go
go/jobs/: Job.go  Run.go
go/models/: WorkerModel.go
rust/: Cargo.toml  dockerfile
rust/src/: api.rs  main.rs
rust/src/db/: mod.rs  mongohelpers.rs
rust/src/domain/: example.rs  mod.rs
rust/src/handlers/: mod.rs  mongoapi.rs
