[package]
name = "rust_example" # the name of the package
version = "0.1.0"    # the current version, obeying semver
authors = ["Adam <adam.intae.gerard@protonmail.com>"]
edition = '2021' # version of rust to use

[dependencies]
actix-web = "4"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }

# https://crates.io/crates/mongodb
[dependencies.mongodb]
version = "2.8.2"
default-features = false
features = ["async-std-runtime"]