[package]
name = "rust_example" # the name of the package
version = "0.2.0"    # the current version, obeying semver
authors = ["Adam <adam.intae.gerard@protonmail.com>"]
edition = '2021' # version of rust to use

[dependencies]
actix-web = "4"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

# https://crates.io/crates/mongodb
[dependencies.mongodb]
version = "3.6.0"